# sieve

./: .gitignore  README.md  example.py  mmlu_evals.py  pyproject.toml  view_activations.ipynb
2b_probes_data/: combine.ipynb
sae/: sae.py  utils.py
src/: agent_eval.py  caa.py  count_activations.py  eval_config.py  regex_interventions.py  utils.py  wrapper.py
src/prompts/: activation_counting_code.json  code.json  code.txt  code_hard.txt  contrastive_prompts.json  longer_pytest_docs.txt  make_json_prompts.ipynb  not_regex_code.txt  probe_prompts.json  prompt.txt  prompt_hard.txt  prompt_medium.txt  prompt_no_regex.txt  prompt_repetitions.txt  pytest_docs.txt  user_questions.txt
