[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "sieve"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "sae_lens>=3.23.0",
    "openai>=1.52.1",
    "ipykernel",
    "lm_eval",
    "seaborn"
]

[tool.pyright]
typeCheckingMode = "standard"
